# myRepository

./: .gitignore  bestPractices  codeChecklist.md  file.txt
Proxy-Agent/agent/: agent.py  config.py  logger.py
Proxy-Agent/nparcProxy/: .gitignore  pom.xml
demoSpringBoot/: pom.xml
go/helloWorld/: Jenkinsfile
k8/deployment/: dep-busybox.yml  (+4 more)
kafka/: KafkaPOC.docx  README.md
notes/: Cloud-Q-AWS.txt  Hadoop-all.txt  Hadoop-hbase.txt  Hadoop-security.txt  Hadoop-spark.txt  ICAWS CST.json  InterviewQuestions.xlsx  Jdk8-NewFeatures.txt  Jdk8-NewFeatures_old.txt  Kafka.txt  Messaging-Queue  Messaging-Queue.md  ORG.sql  REstAPI_Standards.txt  Rp-Job7x.sql  Rp-UI-8x.sql  ShiviTodo.txt  TD2.sql  TODO-Analytics.txt  TodoEnglish.txt  TodoSpring.txt  cloud.txt  installing Hadoop Hbase, Phoenix, spark and oozie.txt  questions.txt  rules_25-7-18.sql
practice/: BST.java  BSTMain.java  Node.java  pom.xml
ws-python/: .gitignore
ws-python/intuit/: .gitignore  README.md  README_SALES_PREDICTION.md  pyproject.toml  run_loader.sh  run_tests.sh  run_train_model.sh
ws-python/intuit/data/: amazon_category_sales_2023_2025.parquet
ws-python/intuit/models/: prophet_AMAZON.joblib  prophet_biz_123.joblib
ws-python/intuit/src/business_prediction/: __init__.py  demo_top_sales.py  loader.py  main.py
ws-python/intuit/src/business_prediction/dataloader/: parquet_loader.py
ws-python/intuit/src/business_prediction/ml/training/: loader_business_data.py  model_training.py
ws-python/intuit/src/business_prediction/models/: model_verification.py
ws-python/intuit/tests/: test_main.py
(+122 files in other folders)
